# e2studio-mcp-bridge

./: .gitignore  INSTALL.md  LICENSE  QUICKSTART.md  README.md
.claude-plugin/: marketplace.json
claude-plugin/: README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/commands/: ask.md  danger.md  menu.md  setup.md  status.md
claude-plugin/scripts/: bootstrap_and_run.py  run_mcp_server.sh
claude-plugin/skills/e2studio-menu-lookup/: SKILL.md
docs/: OPEN_QUESTIONS.md  architecture.md  install_e2studio_bridge.md  security_model.md
eclipse-bridge/bundles/com.example.e2studio.agent.bridge/: plugin.xml  pom.xml
eclipse-bridge/bundles/com.example.e2studio.agent.bridge/src/com/example/e2studio/agent/bridge/: AgentEarlyStartup.java  BridgeServer.java
eclipse-bridge/bundles/com.example.e2studio.agent.bridge/src/com/example/e2studio/agent/bridge/auth/: DangerGate.java  DiscoveryFile.java  TokenStore.java
eclipse-bridge/bundles/com.example.e2studio.agent.bridge/src/com/example/e2studio/agent/bridge/exec/: BuildController.java  (+2 more)
eclipse-bridge/features/com.example.e2studio.agent.feature/: feature.xml  pom.xml
eclipse-bridge/releng/: pom.xml
eclipse-bridge/releng/com.example.e2studio.agent.repository/: category.xml  pom.xml
eclipse-bridge/releng/com.example.e2studio.agent.target/: e2studio-tycho.target  pom.xml
mcp-server/: pyproject.toml
mcp-server/src/e2studio_mcp_server/: bridge_client.py  server.py
mcp-server/tests/: test_server.py
samples/: allowlist.example.json  codex_config_stdio.toml
scripts/: build_bridge.sh
(+19 files in other folders)
